# oodini

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs
src/model/: mod.rs  tweet.rs
src/routes/: core.rs  html.rs  mod.rs  rest.rs
